# ChangeLog for net-misc/soledad-common
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  soledad-common-0.6.0.ebuild:
  Add ip6tables as a dependency via net-firewall/iptables[ipv6]

*soledad-common-0.6.0 (02 Dec 2014)

  02 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  +soledad-common-0.6.0.ebuild, +metadata.xml:
  Add soledad-common-0.6.0.ebuild and metadata.xml
