@@ -3,18 +3,17 @@
 # $Header: $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_4} )
+PYTHON_COMPAT=( python2_7 )
 
 inherit eutils git-r3 distutils-r1
 
 DESCRIPTION="Synchronizatin of locally encrypted data among devices"
-HOMEPAGE="https://leap.se/en/docs/soledad"
 EGIT_REPO_URI="https://github.com/leapcode/soledad.git"
-EGIT_COMMIT="${PV}"
-
-LICENSE="GPL-3"
-SLOT="0"
+EGIT_COMMIT=${PV}
+HOMEPAGE="https://leap.se/en/docs/soledad"
 KEYWORDS="~amd64 ~x86"
+LICENSE=GPL-3
+SLOT=0
 
 RDEPEND="dev-python/simplejson[${PYTHON_USEDEP}]
 	dev-python/u1db[${PYTHON_USEDEP}]
