@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Dec 2014; Harold Naparst <harold@alum.mit.edu>
+  soledad-common-0.6.0.ebuild, metadata.xml:
+  Add proxy-maint and python herds. Put tags in lex order.
+
   04 Dec 2014; Harold Naparst <harold@alum.mit.edu>
   soledad-common-0.6.0.ebuild:
   Add ip6tables as a dependency via net-firewall/iptables[ipv6]
